# commitizen-playground

./: CHANGELOG.md.j2  bump.sh  pyproject.toml  reset.sh
repo-a/: CHANGELOG.md  pyproject.toml
repo-b/: CHANGELOG.md  pyproject.toml
repo-b/src/b/: __init__.py
